--- a/myenv/pyvenv.cfg
+++ b/myenv/pyvenv.cfg
@@ -1,3 +1,8 @@
-home = /usr/bin
+home = C:\Users\bebbu\AppData\Local\Programs\Python\Python312
+implementation = CPython
+version_info = 3.12.2.final.0
+virtualenv = 20.25.1
 include-system-site-packages = false
-version = 3.10.12
+base-prefix = C:\Users\bebbu\AppData\Local\Programs\Python\Python312
+base-exec-prefix = C:\Users\bebbu\AppData\Local\Programs\Python\Python312
+base-executable = C:\Users\bebbu\AppData\Local\Programs\Python\Python312\python.exe
